# wwtbam_sfml

./: .gitignore  Button.cpp  Button.h  CMakeLists.txt  Group.cpp  Group.h  ResourceHolder.cpp  ResourceHolder.h  TexturedButton.cpp  TexturedButton.h  Widget.cpp  Widget.h  WidgetManager.cpp  WidgetManager.h  main.cpp
wwtbam_core/: LongButton.cpp  LongButton.h  Question.cpp  Question.h  WindowResolution.h
